# greenland

./: .gitignore  .gitmodules  CLAUDE.md  JSONL_ARCHITECTURE.md  MULTILINGUAL_SUPPORT.md  README.md  anthropic_client.py  build_mac.sh  devserver.py  driver.py  ollama.py  ollama_client.py  openai_client.py  pyproject.toml  requirements-cloud-db.txt  requirements.txt  run_tests.py  setup.py  setup_old.py  system_prompt_builder.py  test_bebras_example.py  test_db_connection.py
.zencoder/rules/: repo.md
attached_assets/: verbs_1757010164350.py
audioshoe/: driver.py  driver_long.py  sample_driver.py  split_file.py  test_driver.py
benchmarks/: datastore.py  test_datastore.py
benchmarks/0015_spell_check/: attention.json  demonstrate.json  laboratory.json  laughter.json  liaison.json  orange.json  partition.json  party.json  stable.json  table.json
benchmarks/0020_definitions/: wordlist.txt
benchmarks/0035_simple_haystack/: actions.txt  locations.txt  names.txt
benchmarks/0050_translate/: wordlist_extended.py
cache/: badjoke.json  cheese.json  history_hobart.json  history_marathon.json  history_slavetrade.json  student1.json  student2.json  student3.json  student4.json  student5.json  teacher1.json  tree.json  volume_calc_brief.json
claude/: config.yaml  splitter.py  stage_files.py
clients/: anthropic_client.py  ollama_client.py  openai_client.py
data/gre_words/: README.md  (+2 more)
docs/: barsukas_agents.gv  barsukas_agents.md  cloud_database_setup.md  difficulty_overrides.md
lib/: gen_benchmark.py  run_benchmark.py  score_table.py  validation.py
output/: model_summary.html
schema/: benchmarks.sql  create_models.py
scripts/: migrate_backend.py
src/: constants.py  driver.py  gen_db.py  interactive.py  run_script.py  telemetry.py
templates/: model_scores.html  run_details.html
tools/: update_nouns_separated.py  update_nouns_structure.py
util/: flesch_kincaid.py
verbalator/: common.py  index.html  samples.py
(+608 files in other folders)
