[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenland"
version = "0.0.4"
dependencies = [
    "jinja2",
    "requests",
    "numpy",
    "torch",
    "torchaudio",
    "librosa",
    "anthropic",
    "transformers",
    "tiktoken",
    "watchdog",
]

[tool.pyinstaller]

[tool.setuptools.packages.find]
include = ["*"]

