[project]
name = "greenland"
version = "0.1.0"
description = "A benchmark suite for language models"
authors = [
    {name = "Greenland Authors", email = "greenland@earlyversion.com"}
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
]
requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
ml = [
    "torch>=2.0.0",
    "librosa>=0.10.0",
    "transformers>=4.35.0",
    "whisper>=1.0",
    "accelerate>=0.25.0",
    "datasets>=2.14.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
